# French-Helper-Console

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/internal/: Characters.h  CommandBase.cpp  CommandBase.h  Console.cpp  Console.h  InputHandler.cpp  InputHandler.h
include/internal/Commands/: Accent.cpp  Accent.h
